# store.rs

./: .travis.yml  Cargo.toml  LICENSE  README.md  index.html  search-index.js
aster/: struct.AstBuilder.html
aster/fn_decl/: index.html  struct.ArgBuilder.html  struct.ArgPatBuilder.html  struct.FnDeclBuilder.html
aster/generics/: index.html  struct.GenericsBuilder.html
aster/ident/: index.html  trait.ToIdent.html
aster/invoke/: index.html  struct.Identity.html  trait.Invoke.html
aster/item/: index.html  struct.ItemBuilder.html  struct.ItemConstBuilder.html  struct.ItemEnumBuilder.html  struct.ItemExternCrateBuilder.html  (+16 more)
aster/lit/: index.html  (+1 more)
docopt/: enum.Error.html  enum.Value.html  index.html  struct.ArgvMap.html  struct.Decoder.html  struct.Docopt.html
quasi/: fn.parse_arm_panic.html  fn.parse_attribute_panic.html  fn.parse_expr_panic.html  fn.parse_item_panic.html  fn.parse_pat_panic.html  fn.parse_stmt_panic.html  fn.parse_ty_panic.html  index.html  struct.IterWrapper.html  struct.ZipLockstep.html  trait.ExtParseUtils.html  trait.IntoWrappedIterator.html  trait.IntoWrappedRepeat.html  trait.ToTokens.html
quasi_codegen/: fn.register.html  index.html
regex/: enum.Error.html  struct.SetMatches.html
serde_codegen/: fn.register.html  index.html
serde_codegen_internals/: enum.Error.html  index.html
src/: lib.rs  main.rs
store/: index.html  sidebar-items.js
store_bin/: index.html
strsim/: fn.damerau_levenshtein.html  fn.jaro.html  fn.jaro_winkler.html  fn.levenshtein.html  index.html
thread_local/: struct.IntoIter.html  struct.IterMut.html
(+217 files in other folders)
