[package]
name = "store"
version = "0.1.0"
authors = ["Baptiste Covolato <b.covolato@gmail.com>"]
description = "In-memory database"
readme = "README.md"
license = "MIT"

[lib]

name = "store"
path = "src/lib.rs"

[[bin]]

name = "store-bin"
path = "src/main.rs"

[dependencies]
serde = "0.8"
docopt = "0.6.82"
serde_macros = "0.8"
clippy = {version = "*", optional = true}
log = "0.3"

[dev-dependencies]
stainless = "*"
env_logger = "0.3"

[features]
default=[]
